--- a/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
@@ -9,26 +9,26 @@
 <div class="container-body">
     <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'In Progress'})"> -->
    <div  *ngIf="getFilteredDate()">
-        <div class="item-container" *ngFor="#each of getFilteredDate()" (click)="gotoAnotherPage(each.getroute)">
+        <div class="item-container" *ngFor="#each of getFilteredDate()" (click)="gotoAnotherPage(each)">
             <div class="container">
-                <div class='cell width-10 padding-left-5'><div class="sequence green">{{each.getroute.sequence_no}}</div></div>
+                <div class='cell width-10 padding-left-5'><div class="sequence green">{{each.sequence_no}}</div></div>
                 <div class='cell'>
-                    <div class='container'><div class='cell width-40 padding-left-5'>{{each.getroute.store_name}}</div></div>
-                    <div class='container'><div class='cell width-40 padding-left-5 italic'>{{each.getroute.retailer_min}}</div></div>
-                    <div class='container'><div class='cell width-40 padding-left-5'>Account receivables ({{each.getroute.number_of_aging_self_transaction}}/{{each.getroute.number_of_aging_self_transaction}})</div></div>
+                    <div class='container'><div class='cell width-40 padding-left-5'>{{each.store_name}}</div></div>
+                    <div class='container'><div class='cell width-40 padding-left-5 italic'>{{each.retailer_min}}</div></div>
+                    <div class='container'><div class='cell width-40 padding-left-5'>Account receivables ({{each.number_of_aging_self_transaction}}/{{each.number_of_aging_self_transaction}})</div></div>
                 </div>
                 <div class='cell'>
-                     <div *ngIf="each.getroute.call_status === 'Not Visited'">
-                        <div class='container'><div class='cell width-40 align-right bold vivid-pink'>{{each.getroute.call_status}}</div></div>
+                     <div *ngIf="each.call_status === 'Not Visited'">
+                        <div class='container'><div class='cell width-40 align-right bold vivid-pink'>{{each.call_status}}</div></div>
                     </div>
-                    <div *ngIf="each.getroute.call_status === 'In Progress'">
-                        <div class='container'><div class='cell width-40 align-right bold dark-sea-green'>{{each.getroute.call_status}}</div></div>
+                    <div *ngIf="each.call_status === 'In Progress'">
+                        <div class='container'><div class='cell width-40 align-right bold dark-sea-green'>{{each.call_status}}</div></div>
                     </div>
-                    <div *ngIf="each.getroute.call_status === 'Visited'">
-                        <div class='container'><div class='cell width-40 align-right bold green'>{{each.getroute.call_status}}</div></div>
+                    <div *ngIf="each.call_status === 'Visited'">
+                        <div class='container'><div class='cell width-40 align-right bold green'>{{each.call_status}}</div></div>
                     </div>
                     <div class='container'><div class='cell width-40 align-right'></div></div>
-                    <div class='container'><div class='cell width-40 align-right'>{{each.getroute.total_amount_self_transaction}} ₱</div></div>
+                    <div class='container'><div class='cell width-40 align-right'>{{each.total_amount_self_transaction | number}} ₱</div></div>
                 </div>
                 <div class='cell width-10 arrow-right'></div>
             </div>
